# montre-py

./: README.md  pyproject.toml
montre/: __init__.py  _concordance.py  _corpus.py  _ffi.py  _hitlist.py
